...
                    style: Theme.of(context)
                        .textTheme
                        .displaySmall
                        ?.copyWith(color: context.onBackground),
                  ),
                  TextField(
                    key: const Key('travelToTextField'),
                    controller: _travelPlaceTextFieldController,
                    style: context.textTheme.headlineMedium,
                    onSubmitted: (_) =>
                        widget.onSuggestPlacesTapped(travelPlace),
                    textInputAction: TextInputAction.search,
                    decoration: InputDecoration(
...
                          widget.onSuggestPlacesTapped(travelPlace),
                      icon: const Icon(
                        Icons.travel_explore,
                        size: 30,
                      ),
                      label: Text(
                        'Suggest',
                        style: context.textTheme.titleLarge?.copyWith(
                          color: context.primaryColor,
                        ),
                      ),
                    ),
                  ),
...
