{
  "welcome": "Welcome {name}",
  "@welcome": {
    "placeholders": {
      "name": {
        "type": "String",
        "example": "Bob"
      }
    }
  },
  "guest": "Guest",
  "splashWait": "Just a moment...",
  "guestLogin": "Login as guest",
  "googleLogin": "Google Login"
}
