...

  Widget _buildNextStepButton() => Directionality(
        textDirection: TextDirection.rtl,
        child: TextButton.icon(
          label: Text(
            switch (_step) {
              QuestionFlowStep.basePlace => 'Next Step',
              QuestionFlowStep.likes => 'Next Step',
              QuestionFlowStep.dislikes => 'Suggest',
            },
            style: context.textTheme.titleLarge,
          ),
          onPressed: switch (_step) {
...
